--- a/package.json
+++ b/package.json
@@ -6,13 +6,25 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.5.0",
+    "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
+    "boxicons": "^2.1.4",
+    "flatpickr": "^4.6.13",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
+    "react-flatpickr": "^3.10.13",
+    "react-floating-button": "^1.1.1",
+    "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
+    "react-simple-star-rating": "^5.1.7",
+    "react-sweetalert2": "^0.6.0",
+    "recharts": "^2.8.0",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.7.29",
+    "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
