--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react-floating-button": "^1.1.1",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.16.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-simple-star-rating": "^5.1.7",
     "react-sweetalert2": "^0.6.0",
     "recharts": "^2.8.0",
